zookeeper/7-zookeeper-ingresstcproute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: zookeeper-route
  namespace: default

spec:
  entryPoints:
    - zookeeper

  routes:
    - match: HostSNI(`*`)
      services:
        - name: zookeeper
          port: 2181
